fix dark mode flash on load

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,33 +6,33 @@
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
   font-family: system-ui;
 
-  --background: 37 29% 99%;
-  --foreground: 222.2 84% 4.9%;
+  --background: 222.2 84% 4.9%;
+  --foreground: 210 40% 93%;
 
-  --card: 37 29% 99%;
-  --card-foreground: 222.2 84% 4.9%;
+  --card: 222.2 84% 4.9%;
+  --card-foreground: 210 40% 93%;
 
-  --popover: 37 29% 99%;
-  --popover-foreground: 222.2 84% 4.9%;
+  --popover: 222.2 84% 4.9%;
+  --popover-foreground: 210 40% 93%;
 
-  --primary: 222.2 47.4% 11.2%;
-  --primary-foreground: 210 40% 98%;
+  --primary: 210 40% 93%;
+  --primary-foreground: 222.2 47.4% 11.2%;
 
-  --secondary: 346 40% 93%;
-  --secondary-foreground: 222.2 47.4% 11.2%;
+  --secondary: 217.2 32.6% 17.5%;
+  --secondary-foreground: 210 40% 93%;
 
-  --muted: 346 40% 93%;
-  --muted-foreground: 215.4 16.3% 46.9%;
+  --muted: 217.2 32.6% 17.5%;
+  --muted-foreground: 215 20.2% 65.1%;
 
-  --accent: 346 40% 93%;
-  --accent-foreground: 222.2 47.4% 11.2%;
+  --accent: 217.2 32.6% 17.5%;
+  --accent-foreground: 210 40% 93%;
 
-  --destructive: 0 84.2% 60.2%;
-  --destructive-foreground: 210 40% 98%;
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 210 40% 93%;
 
-  --border: 214.3 12% 81%;
-  --input: 214.3 21.8% 85%;
-  --ring: 222.2 84% 4.9%;
+  --border: 217.2 32.6% 17.5%;
+  --input: 217.2 32.6% 17.5%;
+  --ring: 212.7 26.8% 83.9%;
 
   --radius: 0.5rem;
 
@@ -69,6 +69,36 @@
   --border: 217.2 32.6% 17.5%;
   --input: 217.2 32.6% 17.5%;
   --ring: 212.7 26.8% 83.9%;
+}
+
+.light {
+    --background: 37 29% 99%;
+    --foreground: 222.2 84% 4.9%;
+  
+    --card: 37 29% 99%;
+    --card-foreground: 222.2 84% 4.9%;
+  
+    --popover: 37 29% 99%;
+    --popover-foreground: 222.2 84% 4.9%;
+  
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+  
+    --secondary: 346 40% 93%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+  
+    --muted: 346 40% 93%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+  
+    --accent: 346 40% 93%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+  
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+  
+    --border: 214.3 12% 81%;
+    --input: 214.3 21.8% 85%;
+    --ring: 222.2 84% 4.9%;
 }
  
 * {
